--- a/src/pacs-pull/gex-pacs-move.html
+++ b/src/pacs-pull/gex-pacs-move.html
@@ -40,6 +40,10 @@
         background: var(--accent-color);
         color: white;
       }
+
+      vaadin-grid-cell-content {
+        background: none!important;
+      }
     </style>
 
   <chips-api
