--- a/src/gex-app.html
+++ b/src/gex-app.html
@@ -46,8 +46,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         --light-primary-color:      #9e9e9e;
         --text-primary-color:       #FFFFFF;
         --accent-color:             #CCFF00;
-        --primary-background-color: #FAFAFA;
-        --primary-text-color:       #212121;
+        --primary-background-color: #212121;
+        --primary-text-color:       #FAFAFA; /*212121*/
         --secondary-text-color:     #757575;
         --disabled-text-color:      #BDBDBD;
         --divider-color:            #BDBDBD;
